# VisualScriptCAD

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  createpackage.py  createpackagewin.py  createpackagewinlocal.py  installdepswin.py
Examples/: all_shapes.vsc  box_sphere_diff.vsc  csg_operations.vsc  lego_brick.vsc  plate_with_holes.vsc  simple_box.vsc  sphere_torus_diff.vsc  vscad_logo.vsc
Installer/: VisualScriptCADInstaller.iss
Libs/glad-opengl-3.3/include/glad/: glad.h
Libs/glad-opengl-3.3/src/: glad.c
Sources/Basic3DNodes/: Basic3DNodeValues.cpp  Basic3DNodeValues.hpp  Basic3DNodes.cpp  Basic3DNodes.hpp  Basic3DTransformationNodes.cpp  MaterialNode.cpp  ShapeNodes.hpp  TransformationNodes.cpp  TransformationNodes.hpp
Sources/BoostOperations/: ExpressionCalculator.cpp  ExpressionCalculator.hpp
Sources/CGALOperations/: BooleanOperations.cpp  BooleanOperations.hpp  Subdivision.cpp  Subdivision.hpp  Triangulation.cpp  Triangulation.hpp
Sources/EngineTest/: BSPTreeTest.cpp  BooleanOperationsTest.cpp  BoostOperationsTest.cpp  BoxUtilsTest.cpp  CGALOperationsTest.cpp  CameraTest.cpp  ExportTest.cpp  MeshGeneratorsTest.cpp  MeshTopologyTest.cpp  ModelTest.cpp  PlaneUtilsTest.cpp  RayTracingTest.cpp  TestUtils.cpp  TestUtils.hpp  TriangleUtilsTest.cpp  main.cpp
Sources/Geometry/: BSPTree.cpp  BSPTree.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingShapes.cpp  BoundingShapes.hpp  Box.cpp  Box.hpp  BoxUtils.cpp  BoxUtils.hpp  Geometry.cpp  Geometry.hpp  IncludeGLM.hpp  Line.cpp  Line.hpp  Plane.cpp  Plane.hpp  PlaneUtils.cpp  PlaneUtils.hpp  Ray.cpp  Ray.hpp  RayIntersection.cpp  RayIntersection.hpp  RayTracing.cpp  RayTracing.hpp  Triangle.cpp  Triangle.hpp  TriangleUtils.cpp  TriangleUtils.hpp
Sources/Modeler/: BasicShapes.cpp  BasicShapes.hpp  Camera.cpp  Camera.hpp  Checksum.cpp  Checksum.hpp  Export.cpp  Export.hpp  Mesh.cpp  Mesh.hpp  MeshGenerators.cpp  MeshGenerators.hpp  MeshTopology.cpp  MeshTopology.hpp  Model.cpp  Model.hpp  PolygonalGenerators.cpp  PolygonalGenerators.hpp  RayTracing.cpp  RayTracing.hpp  Shape.cpp  Shape.hpp  Shapes.cpp  Shapes.hpp  SharedData.hpp  UserData.cpp  UserData.hpp
Sources/VisualScriptCAD/: appicon.aps  main.cpp
Sources/VisualScriptCAD/Application/: CameraDialog.cpp  CameraDialog.hpp  ExportDialog.cpp  ExportDialog.hpp  IconStore.cpp  IconStore.hpp  InfoDialog.cpp  InfoDialog.hpp  MainWindow.cpp  MainWindow.hpp  ModelExport.cpp  ModelExport.hpp  SettingsDialog.cpp  SettingsDialog.hpp  UserSettings.cpp  UserSettings.hpp  Version.cpp  Version.hpp  XMLUtilities.cpp  XMLUtilities.hpp
Sources/VisualScriptCAD/Editor/: BooleanNodes.cpp  BooleanNodes.hpp  ExpressionEditor.cpp  ExpressionEditor.hpp  MaterialNode.cpp  MaterialNode.hpp  NodeEditorControl.cpp  NodeEditorControl.hpp  NodeRegistry.cpp  NodeRegistry.hpp  NodeSelectorTree.cpp  NodeSelectorTree.hpp  NodeValues.cpp  NodeValues.hpp  PointNodes.cpp  PointNodes.hpp  PolygonEditor.cpp  PolygonEditor.hpp  ReadWrite.cpp  ReadWrite.hpp  ShapeNode.cpp  ShapeNode.hpp  ShapeNodes.cpp  ShapeNodes.hpp  SubdivisionNodes.cpp  SubdivisionNodes.hpp  TransformationNodes.cpp  TransformationNodes.hpp
Sources/VisualScriptCAD/Nodes/: BooleanNodes.cpp  BooleanNodes.hpp  ExpressionNode.cpp  ExpressionNode.hpp  MaterialNode.cpp  PointNodes.cpp  PrismNode.cpp  PrismNode.hpp  ShapeNode.cpp  ShapeNode.hpp  ShapeNodes.cpp  ShapeNodes.hpp  TransformShapeNodes.cpp  TransformShapeNodes.hpp  TransformationNodes.cpp  TransformationNodes.hpp
Sources/VisualScriptCAD/Renderer/: Camera.cpp  Camera.hpp  ModelControl.cpp  ModelControl.hpp  RenderModelConverter.cpp  RenderModelConverter.hpp  RenderScene.cpp  RenderScene.hpp  ShaderProgram.cpp  ShaderProgram.hpp
Sources/VisualScriptCADCLI/: CLICommand.cpp  CLICommand.hpp  CLIEnvironment.cpp  CLIEnvironment.hpp  OpenExportCommand.cpp  OpenExportCommand.hpp  main.cpp
Sources/VisualScriptLogic/: ApplicationHeaderIO.cpp  ApplicationHeaderIO.hpp  Basic3DNodeValues.cpp  Basic3DNodeValues.hpp  Basic3DNodes.cpp  Basic3DNodes.hpp  Basic3DTransformationNodes.cpp  Basic3DTransformationNodes.hpp  BooleanNodes.cpp  BooleanNodes.hpp  ExpressionNode.cpp  ExpressionNode.hpp  MaterialNode.cpp  MaterialNode.hpp  ModelEvaluationData.cpp  ModelEvaluationData.hpp  NodeRegistry.cpp  NodeRegistry.hpp  PrismNode.cpp  PrismNode.hpp  ShapeNode.cpp  ShapeNode.hpp  ShapeNodes.cpp  ShapeNodes.hpp  TransformShapeNodes.cpp  TransformShapeNodes.hpp  TransformationNodes.cpp  TransformationNodes.hpp  Version.cpp  Version.hpp  VersionInfo.hpp.in  VisualScriptLogicMain.cpp  VisualScriptLogicMain.hpp  VisualScriptNodesMain.cpp  VisualScriptNodesMain.hpp
Sources/VisualScriptNodes/: Basic3DNodeValues.cpp  ExpressionNode.cpp  GLMReadWrite.cpp  GLMReadWrite.hpp  MaterialNode.cpp  ModelEvaluationData.hpp  PrismNode.hpp  ShapeNode.cpp  ShapeNode.hpp  ShapeNodes.cpp  ShapeNodes.hpp  TransformShapeNodes.cpp  TransformShapeNodes.hpp  TransformationNodes.hpp  VisualScriptNodesMain.cpp  VisualScriptNodesMain.hpp
Test/: CompatibilityTest.py  compatibilitytest.py
Test/TestLib/: Model.py  ObjImporter.py
Tools/: GenerateIconFile.py
Tools/AppIcons/: appicon.pdn
